# fuzzilli

./: .dockerignore  .env  .gitignore  .gitmodules  Makefile  OWNERS  PRESUBMIT.py  Package.swift  README.md  WHITESPACE  docker-compose.distributed.yml  docker-compose.master.yml  docker-compose.workers.yml  docker-compose.yml  env.distributed  postgres-init.sql  query_db.sh  runFuzzilli.sh  runFuzzilli_dbg.sh  tmp  turbo.cfg
Cloud/: README.md
Compiler/: .gitignore  Dockerfile  README.md  build-pbs.sh  package.json  supportedBuiltins.txt
Docs/: HowFuzzilliWorks.md  ProcessingModel.md  TypeDetermination.md
Examples/: postgresql-corpus-example.sh
Misc/: enum_properties.js
Scripts/: DBQuery.sh  RunFuzzilli.sh  SetupPostgres.sh  benchmark-server.sh  cleanup-docker.sh  clear-db.sh  clear-postgres-db.sh  extract_crashes.sh  fuzzer-stats.sh  monitor-performance.sh  query-db.sh  scale-workers.sh  show-crash-javascript.sh  show-stats.sh  start-distributed.sh  test-distributed-sync.sh
Sources/: setup.py
Sources/Agentic_System/smolagent-fork/: _function_type_hints_utils.py  agent_types.py  agents.py  cli.py  default_tools.py  mcp_client.py  memory.py  models.py  monitoring.py  pyodide_deno_executor.bak.py  pyproject.toml  remote_executors.py  tool_validation.py
Sources/Agentic_System/smolagent-fork/prompts/: toolcalling_agent.yaml
Targets/: README.md  coverage.c
Tests/: LinuxMain.swift
Tools/: presubmit.py
old_corpus/: program_20251007071833_134F541A-D484-4DE2-85C4-A6F841289952.fuzzil.history  program_20251007071833_134F541A-D484-4DE2-85C4-A6F841289952.fzil  program_20251007071833_134F541A-D484-4DE2-85C4-A6F841289952.js  program_20251007071833_512AF550-42FF-405F-B4A3-21B4BC3EE4FE.fuzzil.history  program_20251007071833_512AF550-42FF-405F-B4A3-21B4BC3EE4FE.fzil  program_20251007071833_512AF550-42FF-405F-B4A3-21B4BC3EE4FE.js  program_20251007071833_6754B22D-6FC8-44A0-9160-7630FFC39A8F.fuzzil.history  program_20251007071833_6754B22D-6FC8-44A0-9160-7630FFC39A8F.fzil  program_20251007071833_6754B22D-6FC8-44A0-9160-7630FFC39A8F.js  program_20251007071833_7762B42B-02BD-40B7-A965-2A9F536ECC9C.fuzzil.history  program_20251007071833_7762B42B-02BD-40B7-A965-2A9F536ECC9C.fzil  program_20251007071833_7762B42B-02BD-40B7-A965-2A9F536ECC9C.js  program_20251007071833_C5EEA5AF-D9F4-466D-BB4D-1C59A23DB021.fuzzil.history  program_20251007071833_C5EEA5AF-D9F4-466D-BB4D-1C59A23DB021.fzil  program_20251007071833_C5EEA5AF-D9F4-466D-BB4D-1C59A23DB021.js  program_20251007071833_C78FB6A0-DE6D-4E7D-A6FF-C98E6302032B.fuzzil.history  program_20251007071833_C78FB6A0-DE6D-4E7D-A6FF-C98E6302032B.fzil  program_20251007071833_C78FB6A0-DE6D-4E7D-A6FF-C98E6302032B.js  program_20251007071833_CD726693-5597-4A80-B239-8F6DC3E3EBA1.fuzzil.history  program_20251007071833_CD726693-5597-4A80-B239-8F6DC3E3EBA1.fzil  program_20251007071833_CD726693-5597-4A80-B239-8F6DC3E3EBA1.js  program_20251007071833_CFFA0519-CA00-4ABB-9CF0-B1996D6AC4A6.fuzzil.history  program_20251007071833_CFFA0519-CA00-4ABB-9CF0-B1996D6AC4A6.fzil  (+727 more)
rag_db/: .active_collection
(+3609 files in other folders)
